# open_gl_rendering

./: CMakeLists.txt  README.md  automate-vcpkg.cmake  main.cpp
OGLE/: CMakeLists.txt
OGLE/src/: CommonHeaders.h  OGLEApp.cpp  OGLEApp.h  OGLEWindow.cpp  OGLEWindow.h  ShaderManager.h
OGLE_EDITOR/: CMakeLists.txt
OGLE_EDITOR/src/: main.cpp
